--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,6 @@ input:focus {
 }
 
 .input-right {
-  /* padding:10px 10px 7px 10px; */
   border-top: 1px;
   border-bottom: 1px;
   border-right: 1px;
@@ -38,12 +37,12 @@ input:focus {
 }
 
 .input-left {
+  border-right:0px;
   border-top: 1px;
   border-bottom: 1px;
   border-left: 1px;
   border-color: #B24242;
   border-style: solid;
-  border-right-width: 0px;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
   width:33.33%;
@@ -65,15 +64,6 @@ input:focus {
   font-size: 14px;
   color:white;
 }
-
-/* .input-left:hover {
-  
-  
-}
-
-.input-right:hover {
-  background-color: #a54946;
-} */
 
 .input-field{
   width:33.33%;
